--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>The form attribute specifies the form an input element belongs to.</p>
 
-<form action="/action_page.php" id="form1">
+<form action="/" id="form1">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <input type="submit" value="Submit">
