--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>The input form attribute</h1>
     <p>The form attribute specifies the form an input element belongs to.</p>
 
-    <form action="/action_page.php" id="form1">
+    <form action="teste.htmlp" id="form1">
         <label for="fname">First name:</label>
         <input type="text" id="fname" name="fname" value="Ana"><br><br>
         <input type="submit" value="Submit">
